--- a/.gitignore
+++ b/.gitignore
@@ -76,5 +76,6 @@ crashlytics-build.properties
 *.prof
 *.validationcache
 */Assets/Wwise/Editor/ProjectData/AkWwiseProjectData.asset*
-WwiseProject/GeneratedSoundBanks
+*/WwiseProject/GeneratedSoundBanks
 Assets/Samples
+*.bnk
